_build/html/reports/Cap1.err.log
Traceback (most recent call last):
  File "C:\Users\denis.osses\Anaconda3\lib\site-packages\jupyter_cache\executors\utils.py", line 58, in single_nb_execution
    executenb(
  File "C:\Users\denis.osses\Anaconda3\lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Users\denis.osses\Anaconda3\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\Users\denis.osses\Anaconda3\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "C:\Users\denis.osses\Anaconda3\lib\asyncio\base_events.py", line 647, in run_until_complete
    return future.result()
  File "C:\Users\denis.osses\Anaconda3\lib\site-packages\nbclient\client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "C:\Users\denis.osses\Anaconda3\lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "C:\Users\denis.osses\Anaconda3\lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
import numpy as np
import matplotlib.pyplot as plt
from scipy.integrate import solve_ivp

# Parámetros
# Cantidad total a memorizar
M = ## ¿? 
# Valor fijo de la constante de proporcionalidad
k = ## ¿?  

# Diferentes condiciones iniciales
A0_values = ## [¿?, ¿?, ¿?, ¿?]

# Definición de la ecuación diferencial
def dA_dt(t, A, k):
    return ## ¿? Ponga aquí su modelo del inciso (a)

# Tiempo de integración
t_eval = np.linspace(0, 10, 300)

# Resolver y graficar para diferentes condiciones iniciales
plt.figure(figsize=(10, 6))

for A0 in A0_values:
    sol = solve_ivp(dA_dt, [0, 10], [A0], args=(k,), t_eval=t_eval)
    plt.plot(sol.t, sol.y[0], label=f'A(0) = {A0/M}M')

# Configuración del gráfico
plt.title('Memorización a lo largo del tiempo con diferentes condiciones iniciales')
plt.xlabel('Tiempo t')
plt.ylabel('Cantidad memorizada A(t)')
plt.legend()
plt.grid(True)
plt.show()
------------------

[1;36m  File [1;32m"C:\Users\denis.osses\AppData\Local\Temp\ipykernel_30796\3181253743.py"[1;36m, line [1;32m7[0m
[1;33m    M = ## ¿?[0m
[1;37m        ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (3181253743.py, line 7)

